--- a/index.html
+++ b/index.html
@@ -104,35 +104,32 @@
             let round = compArr[Math.floor(Math.random()*compArr.length)];
             return round;
         }
-        let ruth = 'Ruth'
+
         //the funtion goes through a conditional and appends 
         //their respective content to parent node 'tableRow'
         function playRound(input, computerSelection) {
             console.log(input)
             console.log(computerSelection)
             if (input === 'Rock' && computerSelection === 'Paper') {
-                // playerText.textContent = `${input}`
-                // computerText.textContent = `${computerSelection}`
-                // tableRow.appendChild(playerText);
-                // tableRow.appendChild(computerText);
-                return ruth
+                playerText.textContent = `${input}`
+                computerText.textContent = `${computerSelection}`
+                tableRow.appendChild(playerText);
+                tableRow.appendChild(computerText);
             } else if (input === 'Rock' && computerSelection === 'Scissors') {
-                // playerText.textContent = `${input}`
-                // computerText.textContent = `${computerSelection}`
-                // tableRow.appendChild(playerText);
-                // tableRow.appendChild(computerText);
-                return ruth
+                playerText.textContent = `${input}`
+                computerText.textContent = `${computerSelection}`
+                tableRow.appendChild(playerText);
+                tableRow.appendChild(computerText);
             } else if (input === 'Paper' && computerSelection === 'Scissors') {
                 playerText.textContent = `${input}`
                 computerText.textContent = `${computerSelection}`
                 tableRow.appendChild(playerText);
                 tableRow.appendChild(computerText);
             } else if (input === 'Paper' && computerSelection === 'Rock') {
-                // playerText.textContent = `${input}`
-                // computerText.textContent = `${computerSelection}`
-                // tableRow.appendChild(playerText);
-                // tableRow.appendChild(computerText);
-                return ruth
+                playerText.textContent = `${input}`
+                computerText.textContent = `${computerSelection}`
+                tableRow.appendChild(playerText);
+                tableRow.appendChild(computerText);
             } else if (input === 'Scissors' && computerSelection === 'Rock') {
                 playerText.textContent = `${input}`
                 computerText.textContent = `${computerSelection}`
@@ -144,11 +141,10 @@
                 tableRow.appendChild(playerText);
                 tableRow.appendChild(computerText);
             } else {
-                // playerText.textContent = `${input}`
-                // computerText.textContent = `${computerSelection}`
-                // tableRow.appendChild(playerText);
-                // tableRow.appendChild(computerText);
-                return ruth
+                playerText.textContent = `${input}`
+                computerText.textContent = `${computerSelection}`
+                tableRow.appendChild(playerText);
+                tableRow.appendChild(computerText);
             }
         }
 
@@ -157,9 +153,9 @@
             button.addEventListener('click', () => {
                 //I've defined 'computerSelection' and 'input' to be 
                 //used in the 'playRound' function
-                const computerSelection = computerPlay();
-                const input = button.id;
-                //Append output of 'playRound' to its parent node
+                const computerSelection = 'Ruth';
+                const input = 'Ruth';
+                //Append output of 'playRound' to its parent
                 para.textContent = playRound(input, computerSelection)
                 div.appendChild(para);
             })
