--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         const computerText = document.getElementById('computerInput');
         
         //computer randomly picks an item in 'compArr' to play 
-        let compArr = ['Ruth', 'Noor', 'Noor']
+        let compArr = ['Ruth', 'Noor', 'Rock']
         function computerPlay() {
             let round = compArr[Math.floor(Math.random()*compArr.length)];
             return round;
