--- a/index.html
+++ b/index.html
@@ -4,36 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&display=swap" rel="stylesheet">
 
     <title>Document</title>
     <style>
         html, body {
             margin: 0;
             height: 100%;
+            width: ;
         }
         body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
             font-family: 'Nunito Sans', sans-serif;
+            background-color: #FFE669;
+            color: #FFFFFF ;
         }
         h1 {
-            padding-top: 5px;
+            text-align: center;
+            margin-top: 25px;
+            font-size: 4.5em;
+            align-content: center;
         }
         #container {
-            margin-top: 10%;
-            padding: 20px 50px;
+            display: flex;
+            flex-direction: column;
+            height: 20em;
+            justify-content: space-evenly;
+            margin-right: 78%;
         }
         button {
+            margin: 0 40px;
+            padding: 12px 5px;
             border: none;
             outline: none;
             background-color: #FB978E;
-            padding: 14px 40px;
             font-size: 16px;
+            color: #ffffff;
         }
         button:hover {
             background-color: #FB867C;
+            transform: scale(1.1);
         }
         button:active {
             transform: scale(.9);
@@ -43,47 +52,46 @@
             color: black;
         }
         #newParagraph {
-            margin-top: 35px;
-            height: 30%;
-            width: 75%;
             background-color: #F1F1F1;
         }
         table {
             width: 100%;
-            height: 50%;
+            padding: 0px 20%;
         }
        th {
+           font-size: 23px;
+           color: #FB978E;
            width: 50%;
        }
         td {
-            text-align: center;
-            width: 100&;
-            height: 50%;
+            color: #FB978E;
         }
     </style>
 </head>
 <body>
     <h1>Rock Paper Scissors</h1>
+    <main>
+        <div id='newParagraph'>
+            <table>
+                <tr id='trcenter'>
+                    <th>Player</th>
+                    <th>Computer</th>
+                </tr>
+                <!-- This is where I will display user and computer input -->
+                <tr id='tableRows'>
+                    <td id='playerInput'> </td>
+                    <td id='computerInput'> </td>
+                </tr>
+            </table>
+    </div>
     <div id="container">
         <button id='Rock'>Rock</button>
         <button id='Paper'>Paper</button>
         <button id='Scissors'>Scissors</button>
     </div>
     
-    <div id='newParagraph'>
-            <table>
-                <tr>
-                    <th>Player</th>
-                    <th>Computer</th>
-                </tr>
-                <!-- This is where I will display user and computer input -->
-                <tr id='tableRows'>
-                    <td id='playerInput'></td>
-                    <td id='computerInput'></td>
-                </tr>
-            </table>
-    </div>
     <p id='par'></p>
+    </main>
 
     <script>
         const buttons = document.querySelectorAll('button');
@@ -147,6 +155,7 @@
                 tableRow.appendChild(computerText);
             }
         }
+
 
         //button event listener
         buttons.forEach((button => {
